--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attrs==21.2.0
 certifi==2020.12.5
 click==8.0.3
 colorama==0.4.4
+dataclasses==0.7
 flasgger==0.9.5
 Flask==2.0.2
 importlib-metadata==4.8.2
