--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.4
 dataclasses==0.6
 flasgger==0.9.5
 Flask==2.0.2
+gunicorn==20.0.4
 importlib-metadata==4.8.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
